--- a/about/index.html
+++ b/about/index.html
@@ -5,8 +5,10 @@ title: Zuurix.com - About
 <div class="blurb">
 
 <h1>About</h1>
-
-<p>I am Aivaras Klimas, also known as an independent game developer Zuurix. Making games is everything to me.</a>
+	
+<p>Hello!</p>
+	
+<p>I am Aivaras Klimas, also known as an independent game developer Zuurix. Making games is everything to me.</p>
 
 <p>Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.
 I used to create interface sprites and other assets with MS Paint for fictional games.</p>
@@ -22,7 +24,7 @@ Because I was unable to find a replacement for that game, I decided to stop pret
 <p>I am planning to release more games in 2019 and 2020.</p>
 
 <p>My strengths are coding and design. I can make decent graphics as well.</p>
-<p>I would like to become better at writing and try making music at some point, just to see if I can do it.</a>
+<p>I would like to become better at writing and try making music at some point, just to see if I can do it.</p>
 
 <p>When I don't make games, I play games, watch TV shows or YouTube, sometimes read books.
 I'm a huge fan of everything sci-fi/fantasy.</p>
