--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -3,16 +3,65 @@ layout: default
 title: Zuurix.com - Sector Six press kit
 ---
 <div class="blurb">
-	<h1>Sector Six press kit</h1>
 	
+<h1>Sector Six press kit</h1>
+	
+<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot and extensive customization.</p>
+  
+<comments>
+<a>Get Sector Six</a>
+</comments>	
+	
+<ul style="list-style-type:none; margin-bottom: 0px;">
+<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam</a></li>
+</ul>
+	
+<comments>
+<a>Features</a>
+</comments>
+	
+<p><b>Save the Universe</b></p>
+
+<p>Enter distant future and join the desperate fight to stop the Eight Machines from destroying everything. Unleash apocalyptic weapons, break laws of physics, resurrect ravaged dimensions - nothing is impossible in a war of this scale.</p>
+
+<p><b>Build your spaceship</b></p>
+
+<p>Build your spaceship from procedural parts, obtained by destroying minions of the Machines and completing missions. Every part has various properties and can be placed anywhere on the building field, allowing you to customize performance and appearance of your spaceship however you want.</p>
+
+<p><b>Become master of spaceship combat</b></p>
+
+<p>Test not just your spaceship, but also your skills as you dodge enemy projectiles and find the right timing to counterattack with your own. Each enemy brings new attacks, defenses, and strategies to defeat - it’s up to you to hone your combat skills and take them down.</p>
+
+<p><b>Spaceship part customization and part sets</b></p>
+
+<p>Combine, upgrade and re-roll parts to create ones that are ideal for your dream spaceship. If that is not enough, collect set parts to activate game-changing set effects and transform your destroyer of invaders into something even more powerful!</p>
+
+<p><b>Modular difficulty system</b></p>
+
+<p>Make the game as hard as you want it to be! Forget "Easy / Medium / Hard" - the modular difficulty system allows you to modify almost every element of the combat and even gives rewards for it.</p>
+
 	<comments>
+	<a>Trailer</a>
+	</comments>
+	
+	<space>
+	<a> </a>
+	</space>
+	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/DRqp3gsbvOw" frameborder="0" allowfullscreen></iframe>
+  
+	<space>
+	<a> </a>
+	</space>
+	
+  	<comments>
 	<a>Developer</a>
 	</comments>
 	
 	<ul style="list-style-type:none">
 	<li>Zuurix</li>
 	<li><b>Website:</b> http://zuurix.com//</li>
-	<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix/</li>
+	<li><b>Facebook:</b> https://www.facebook.com/Games-by-Zuurix-1417183375191866/</li>
 	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix</li>
 	</ul>
 	
@@ -46,8 +95,10 @@ title: Zuurix.com - Sector Six press kit
 	
 	<ul style="list-style-type:none">
 
-	<li>Completed</li>
-	<li><b>Release date: </b>2018-09-07</li>
+	<li>In development</li>
+	<li>Beta</li>
+	<li>Early Access</li>
+	<li><b>Estimated release date: </b>Q4 2017</li>
 
 	</ul>
 	
@@ -58,41 +109,9 @@ title: Zuurix.com - Sector Six press kit
 	<ul style="list-style-type:none">
 
 	<li>Aivaras Klimas</li>
-	<li><b>Email:</b> zuurix@protonmail.com</li>
+	<li><b>Email:</b> zuurixgames@gmail.com</li>
 
 	</ul>
-	
-	<comments>
-	<a>Game description</a>
-	</comments>
-	
-	<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot, extensive customization, and story missions.</p>
-	
-	<p><b>Save the Universe</b></p>
-
-	<p>Enter distant future and join the desperate fight to stop the Eight Machines from destroying everything. In your journey, you will interact with ancient structures and beings, break laws of physics, travel between Sectors, battle swarms of the Machine minions, collectors, despair, anomalies, defense systems - all to stop the terrible enemy.</p>
-
-	<p><b>Build your spaceship</b></p>
-
-	<p>Spaceship building allows you to build a unique ship from procedural parts, obtained by destroying minions of the Machines. Every part has various properties and can be placed anywhere on the building field, allowing you to customize performance, appearance, and size of your ship.</p>
-
-	<p><b>Become master of spaceship combat</b></p>
-
-	<p>Test not just your spaceship, but also your skills as you dodge enemy projectiles and find the right timing to counterattack with your own. Each enemy brings new attacks, defenses, and strategies to defeat - it’s up to you to hone your combat skills and take them down.</p>
-
-	<p><b>Part customization, part sets, and relics</b></p>
-
-	<p>Combine, upgrade, and re-roll parts to create ones that are ideal for your dream spaceship. If that is not enough, collect set parts and relics to transform your destroyer of invaders into something even more powerful!</p>
-
-	<p><b>Modular difficulty system</b></p>
-
-	<p>Make the game as hard as you want it to be! Modular difficulty system allows you to modify almost every element of the combat and offers rewards for increasing the difficulty.</p>
-		
-	<comments>
-	<a>Trailer</a>
-	</comments>
-	
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/3f1KipPu1fg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	
 	<comments>
 	<a>Screenshots</a>
