--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -6,8 +6,6 @@ title: Zuurix.com - Sector Six press kit
 	
 <h1>Sector Six press kit</h1>
 	
-<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot, extensive customization, and story missions.</p>
-	
 	<comments>
 	<a>Game description</a>
 	</comments>
@@ -111,6 +109,10 @@ title: Zuurix.com - Sector Six press kit
 	<a>Screenshots</a>
 	</comments>
 	
+	<micro-space>
+	<a></a>
+	</micro-space>
+	
 	<a href=
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png" title="Combat: Using Era's End ability" style="height: 320px; width: 480px;"/></a>
@@ -143,6 +145,10 @@ title: Zuurix.com - Sector Six press kit
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png" title="Combat: Fighting sentry" style="height: 320px; width: 480px;"/></a>
 	
+	<micro-space>
+	<a></a>
+	</micro-space>
+	
 	<comments>
 	<a>Images</a>
 	</comments>
@@ -174,5 +180,9 @@ title: Zuurix.com - Sector Six press kit
 	<a href="http://imgur.com/6rQ5MgZ"><img src="http://i.imgur.com/6rQ5MgZ.png" title="source: imgur.com" /></a>
 
         <a href="http://imgur.com/HE9VSOk"><img src="http://i.imgur.com/HE9VSOk.png" title="source: imgur.com" /></a>
+	
+	<micro-space>
+	<a></a>
+	</micro-space>
 	
 </div><!-- /.blurb -->
