--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -6,9 +6,11 @@ title: Zuurix.com - Sector Six press kit
 	
 <h1>Sector Six press kit</h1>
 	
-	<comments>
-	<a>Game description</a>
-	</comments>
+<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot, extensive customization, and story missions.</p>
+	
+<comments>
+<a>Full game description</a>
+</comments>
 	
 	<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot, extensive customization, and story missions.</p>
 	
@@ -109,9 +111,9 @@ title: Zuurix.com - Sector Six press kit
 	<a>Screenshots</a>
 	</comments>
 	
-	<micro-space>
-	<a></a>
-	</micro-space>
+	<space>
+	<a> </a>
+	</space>
 	
 	<a href=
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png">
@@ -145,9 +147,9 @@ title: Zuurix.com - Sector Six press kit
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png" title="Combat: Fighting sentry" style="height: 320px; width: 480px;"/></a>
 	
-	<micro-space>
-	<a></a>
-	</micro-space>
+	<space>
+	<a> </a>
+	</space>
 	
 	<comments>
 	<a>Images</a>
@@ -181,8 +183,8 @@ title: Zuurix.com - Sector Six press kit
 
         <a href="http://imgur.com/HE9VSOk"><img src="http://i.imgur.com/HE9VSOk.png" title="source: imgur.com" /></a>
 	
-	<micro-space>
-	<a></a>
-	</micro-space>
+	<space>
+	<a> </a>
+	</space>
 	
 </div><!-- /.blurb -->
