--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -79,7 +79,7 @@ title: Zuurix.com - Sector Six press kit
 	<li><b>Platforms:</b> Windows, Linux</li>
 	<li><b>Stores:</b> Steam</li>
 	<li><b>Steam Store link: </b>http://store.steampowered.com/app/465020</li>
-	<li><b>Price:</b> 9.99 €</li>
+	<li><b>Price:</b> $9.99</li>
 
 	</ul>
 	
@@ -89,10 +89,8 @@ title: Zuurix.com - Sector Six press kit
 	
 	<ul style="list-style-type:none">
 
-	<li>In development</li>
-	<li>Beta</li>
-	<li>Early Access</li>
-	<li><b>Estimated release date: </b>Q4 2017</li>
+	<li>Completed</li>
+	<li><b>Release date:</b> 2018-09-07</li>
 
 	</ul>
 	
@@ -103,7 +101,7 @@ title: Zuurix.com - Sector Six press kit
 	<ul style="list-style-type:none">
 
 	<li>Aivaras Klimas</li>
-	<li><b>Email:</b> zuurixgames@gmail.com</li>
+	<li><b>Email:</b> zuurix@protonmail.com</li>
 
 	</ul>
 	
@@ -154,10 +152,8 @@ title: Zuurix.com - Sector Six press kit
 	<comments>
 	<a>Images</a>
 	</comments>
-	
+
 	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" /></a>
-	
-	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" style="height: 320px; width: 600px;"/></a>
 	
 	<a href="http://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" style="height: 270px; width: 400px;"/></a>
 	
