--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -6,7 +6,7 @@ title: Zuurix.com - Sector Six press kit
 	
 <h1>Sector Six press kit</h1>
 	
-<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot, extensive customization, and story missions.</p>
+<p>Contacts, information, and resources</p>
 	
 <comments>
 <a>Full game description</a>
