--- a/community/index.html
+++ b/community/index.html
@@ -17,12 +17,12 @@ title: Zuurix.com - Community
 <a>Links</a>
 </comments>
 
-<p><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">▶ Steam</a></p>
-<p><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">▶ Facebook</a></p>
-<p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">▶ YouTube</a></p>
-<p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ Twitter</a></p>
-<p><a href="https://www.twitch.tv/zuurix0" target="_blank">▶ Twitch</a></p>
-<p><a href="https://discord.gg/TpwszJu" target="_blank">▶ Discord</a></p>
+<p><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">▶ Join my Steam group</a></p>
+<p><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">▶ Follow my Facebook page</a></p>
+<p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">▶ Subscribe to my YouTube channel</a></p>
+<p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ Follow me on Twitter</a></p>
+<p><a href="https://www.twitch.tv/zuurix0" target="_blank">▶ Follow me on Twitch</a></p>
+<p><a href="https://discord.gg/TpwszJu" target="_blank">▶ Join my Discord server</a></p>
 
 <comments>
 <a>Comments</a>
