--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@ title: Zuurix.com - About
 I used to create interface sprites and other assets with MS Paint for fictional games.</p>
 
 <p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.
-Because I was unable to find a replacement for that game, I decided to stop pretending and start making real games.</p>
+Because I was unable to find a replacement for that game, I decided make my own games.</p>
 
 <p>I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.</p>
 
