--- a/about/index.html
+++ b/about/index.html
@@ -14,9 +14,11 @@ title: Zuurix.com - About
 I used to create interface sprites and other assets with MS Paint for fictional games.</p>
 
 <p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.
-Because I was unable to find a replacement for that game, I decided make my own games.</p>
+Because I was unable to find a replacement for that game, I decided to try making my own games.</p>
 
-<p>I learned programming basics with help of online courses and in September 2013 started making games with GameMaker: Studio.</p>
+<p>I learned programming basics with help of online courses and in September 2013 started working with GameMaker: Studio.</p>
+
+<p>Now I can't imagine my life without game development.</p>
 
 <p>My first serious commercial game – Sector Six – was released on May 2016 as a Steam Early Access title.</p>
 <p>In September 2018 it has left Early Access and currently, Sector Six is my biggest game.</p>
