--- a/community/index.html
+++ b/community/index.html
@@ -23,6 +23,7 @@ title: Zuurix.com - Community
 <p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ Follow me on Twitter</a></p>
 <p><a href="https://www.twitch.tv/zuurix0" target="_blank">▶ Follow me on Twitch</a></p>
 <p><a href="https://discord.gg/TpwszJu" target="_blank">▶ Join my Discord server</a></p>
+<p><a href="https://www.reddit.com/r/GamesByZuurix/" target="_blank">▶ Discuss games by Zuurix on Reddit</a></p>
 
 <comments>
 <a>Comments</a>
