--- a/other-games/index.html
+++ b/other-games/index.html
@@ -43,6 +43,18 @@ title: Zuurix.com - Other games
 <ul style="list-style-type:none; margin-bottom: 202px;">
 <li><a href="https://zuurix.itch.io/the-name-of-the-demon" target="_blank">▶ Download</a></li>
 </ul>
+	
+<comments>
+<a>Avalir's Quest</a>
+</comments>
+	
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Avalir's%20Quest%20picture.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	
+<p>Avalir's Quest is a casual RPG/dungeon crawler.</p>	
+	
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="https://zuurix.itch.io/avalirs-quest" target="_blank">▶ Download</a></li>
+</ul>	
 
 <comments>
 <a>Battle for '17</a>
