--- a/community/index.html
+++ b/community/index.html
@@ -10,8 +10,7 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p>Sector Six is released!</p>
-<p><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">▶ Play now!</a></p>
+<p>I'm going to announce my next major game project soon!</p>
 
 <comments>
 <a>Links</a>
