--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,8 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p>I'm going to announce my next major game project soon!</p>
+<p>New game announcement has been delayed to December, so have an etalon:</p>
+<p>Go to spaceship interface, uninstall every part except the Elder Mechanism and type MECHANISM</p>
 
 <comments>
 <a>Links</a>
