--- a/community/index.html
+++ b/community/index.html
@@ -10,8 +10,7 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p>New game announcement has been delayed to December, so have an etalon:</p>
-<p>Go to spaceship interface, uninstall every part except the Elder Mechanism and type MECHANISM</p>
+<p>Started working on a new game: Light of the Locked World!</p>
 
 <comments>
 <a>Links</a>
