--- a/games/index.html
+++ b/games/index.html
@@ -19,6 +19,18 @@ title: Zuurix.com - Games
 	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">▶ Get from Steam</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">▶ View press kit</a></li>
 	</ul>
+	
+	<comments>
+	<a>Light of the Locked World</a>
+	</comments>
+	
+	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/102181edc7b971056f2f3ddd6bc36ee068220567/images/miscellaneous/LOTLW%20temporary%20logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	
+	<p>Light of the Locked World is a fantasy RPG with co-op and PvP, focused on combat and exploration.</p>	
+	
+	<ul style="margin-bottom: 202px; list-style-type: none;">
+	<li><a href="http://zuurix.com/lotlw-press-kit/">▶ View press kit</a></li>
+	</ul>
 		
 	<comments>
 	<a>Other games</a>
