--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -32,7 +32,7 @@ title: Zuurix.com - Light of the Locked World press kit
 	
 	<ul style="list-style-type:none">
 	<li>Zuurix</li>
-	<li><b>Website:</b> http://zuurix.com//</li>
+	<li><b>Website:</b> http://zuurix.com/</li>
 	<li><b>Facebook:</b> https://www.facebook.com/Games-by-Zuurix-1417183375191866/</li>
 	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix</li>
 	</ul>
@@ -66,9 +66,5 @@ title: Zuurix.com - Light of the Locked World press kit
 	<li><b>Email:</b> zuurix@protonmail.com</li>
 
 	</ul>
-  
-  <space>
-	<a> </a>
-	</space>
 	
 </div><!-- /.blurb -->
