--- a/games/index.html
+++ b/games/index.html
@@ -29,7 +29,7 @@ title: Zuurix.com - Games
 	<p>Light of the Locked World is a fantasy RPG with co-op and PvP, focused on combat and exploration.</p>	
 	
 	<ul style="margin-bottom: 202px; list-style-type: none;">
-	<li><a href="http://zuurix.com/lotlw-press-kit/">▶ View press kit</a></li>
+	<li><a href="http://zuurix.com/light-of-the-locked-world/">▶ View press kit</a></li>
 	</ul>
 		
 	<comments>
