--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -24,7 +24,7 @@ title: Zuurix.com - Light of the Locked World press kit
 
 	<p><b>PvP</b></p>
 
-	<p>But you're not limited to unity. Enable PvP and turn game into an epic competition for limited resources and treasure!</p>
+	<p>But you're not limited to unity! Enable PvP and turn game into an epic competition for limited resources and treasure.</p>
 	
   <comments>
 	<a>Developer</a>
