--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -16,7 +16,7 @@ title: Zuurix.com - Light of the Locked World press kit
 	
 	<p><b>RPG</b></p>
 
-	<p>Fight enemies, find, loot, and craft equipment to customize your character with it, learn skills and spells, complete quests, and make decisions. This is RPG.</p>
+	<p>Fight enemies, equip items to customize your character, learn skills and spells, explore world, complete quests, and make decisions. This is RPG.</p>
 
 	<p><b>Co-op</b></p>
 
@@ -24,7 +24,7 @@ title: Zuurix.com - Light of the Locked World press kit
 
 	<p><b>PvP</b></p>
 
-	<p>But you're not limited to unity! Enable PvP and turn game into an epic competition for limited resources and treasure.</p>
+	<p>You are not limited to unity! Enable PvP and turn game into an epic competition for limited resources and treasure.</p>
 	
   <comments>
 	<a>Developer</a>
