--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p>Working on Sector Six update: Quality of life and endgame content!</p>
+<p>Working on the last content update for Sector Six.</p>
 
 <comments>
 <a>Links</a>
