--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,9 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p>Working on the last content update for Sector Six!</p>
+<p>Final Sector Six content update has been released!</p>
+
+<p>Time for LOTLW!</p>
 
 <comments>
 <a>Links</a>
