--- a/about/index.html
+++ b/about/index.html
@@ -8,25 +8,14 @@ title: Zuurix.com - About
 	
 <p>Hello!</p>
 	
-<p>I am Aivaras Klimas, also known as an independent game developer Zuurix. Making games is everything to me.</p>
+<p>I am Aivaras Klimas, also known as an independent game developer Zuurix.</p>
 
-<p>Video games have always excited me, I remember pretending to be a game developer ever since I got access to a computer.
-I used to create interface sprites and other assets with MS Paint for fictional games.</p>
-
-<p>In 2012 my favorite game RuneScape have gone through heavy changes that made it unplayable for me.
-Because I was unable to find a replacement for that game, I decided to try making my own games.</p>
-
-<p>I learned programming basics with help of online courses and in September 2013 started working with GameMaker: Studio.</p>
-
-<p>Now I can't imagine my life without game development.</p>
+<p>I have started making games in September 2013 using GameMaker: Studio.</p>
 
 <p>My first serious commercial game – Sector Six – was released on May 2016 as a Steam Early Access title.</p>
 <p>In September 2018 it has left Early Access and currently, Sector Six is my biggest game.</p>
 
 <p>I am planning to release more games in 2019 and 2020.</p>
-
-<p>When I don't make games, I play games, watch TV shows or YouTube, sometimes read books.
-I'm a huge fan of everything sci-fi/fantasy.</p>
 
 <comments>
 <a>Contact me</a>
