--- a/community/index.html
+++ b/community/index.html
@@ -10,9 +10,9 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p>Final Sector Six content update has been released!</p>
+<p>Light of the Locked World status:</p>
 
-<p>Time for LOTLW!</p>
+<p>Working on graphics and animations, alpha demo isn't coming this month.</p>
 
 <comments>
 <a>Links</a>
