--- a/about/index.html
+++ b/about/index.html
@@ -7,15 +7,17 @@ title: Zuurix.com - About
 <h1>About</h1>
 	
 <p>Hello!</p>
-	
-<p>I am Aivaras Klimas, also known as an independent game developer Zuurix.</p>
+<p>I am Aivaras Klimas a.k.a. Zuurix and I'm an indie game developer.</p>
 
-<p>I have started making games in September 2013 using GameMaker: Studio.</p>
+<p>I was introduced to video games back when I was 10 years old and since then I am extremely passionate about them.</p>
+<p>I played them, I made sketches of them, I learned about them, and ended up developing them =]</p>
+
+<p>In September 2013 I have completed several online JavaScript lessons, downloaded GameMaker engine and month later I had my first real game done.</p>
 
 <p>My first serious commercial game – Sector Six – was released on May 2016 as a Steam Early Access title.</p>
-<p>In September 2018 it has left Early Access and currently, Sector Six is my biggest game.</p>
+<p>In September 2018 it has left Early Access and currently, Sector Six is my most successful game.</p>
 
-<p>I am planning to release more games in 2019 and 2020.</p>
+<p>Right now I am working Light of the Locked World - an RPG inspired by RuneScape.</p>
 
 <comments>
 <a>Contact me</a>
