--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@ title: Zuurix.com - About
 <p>Hello!</p>
 <p>I am Aivaras Klimas a.k.a. Zuurix and I'm an indie game developer.</p>
 
-<p>I was introduced to video games back when I was 10 years old and since then I am extremely passionate about them.</p>
+<p>I was introduced to video games when I was like 10 years old and since then I am extremely passionate about them.</p>
 <p>I played them, I made sketches of them, I learned about them, and ended up developing them =]</p>
 
 <p>In September 2013 I have completed several online JavaScript lessons, downloaded GameMaker engine and month later I had my first real game done.</p>
