--- a/games/index.html
+++ b/games/index.html
@@ -24,7 +24,7 @@ title: Zuurix.com - Games
 	<a>Light of the Locked World</a>
 	</comments>
 	
-	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/LOTLW%20temporary%20logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Fully%20equiped%20character%202019-03-31.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
 	<p>Light of the Locked World is a fantasy RPG with co-op and PvP, focused on combat and exploration.</p>	
 	
