--- a/community/index.html
+++ b/community/index.html
@@ -18,7 +18,7 @@ title: Zuurix.com - Community
 <a>Links</a>
 </comments>
 
-<p><a href="http://zuurix.com/discord" target="_blank">▶ Join my Discord server</a></p>
+<p><a href="http://zuurix.com/discord">▶ Join my Discord server</a></p>
 <p><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">▶ Join my Steam group</a></p>
 <p><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">▶ Follow my Facebook page</a></p>
 <p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">▶ Subscribe to my YouTube channel</a></p>
