--- a/discord/index.html
+++ b/discord/index.html
@@ -5,9 +5,9 @@ title: Zuurix.com - Join my Discord server
 <div class="blurb">
 	
 <h1>Join my Discord server</h1>
-
-<ul style="list-style-type:none">
-<li><a href="https://discord.gg/fU6zfBj" target="_blank">▶ Click here to join my Discord server</a></li>
-</ul>
+	
+<footer>
+<a href="https://discord.gg/fU6zfBj">▶ Click here to join my Discord server</a>
+</footer>
 
 </div><!-- /.blurb -->
