--- a/about/index.html
+++ b/about/index.html
@@ -14,6 +14,8 @@ title: Zuurix.com - About
 
 <p>In September 2013 I have completed several online JavaScript lessons, downloaded GameMaker engine and month later I had my first real game done.</p>
 
+<p>After that I've been intensively developing games.</p>
+	
 <p>My first serious commercial game – Sector Six – was released on May 2016 as a Steam Early Access title.</p>
 <p>In September 2018 it has left Early Access and currently, Sector Six is my most successful game.</p>
 
