--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Zuurix.com - Home
 
 <div class="blurb">
 	
-<h1>*Home</h1>
+<h1>Home</h1>
 	
 <p>Welcome to the home for awesome indie games created by Zuurix!</p>
 	
