--- a/discord/index.html
+++ b/discord/index.html
@@ -1,5 +1,5 @@
-<div class="blurb">
+<html>
 	
-<a href="https://discord.gg/fU6zfBj">▶ Click here to join my Discord server</a>
-
-</div><!-- /.blurb -->
+<a href="https://discord.gg/fU6zfBj">▶ *Click here to join my Discord server</a>
+	
+</html>
