--- a/discord/index.html
+++ b/discord/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<a href="https://discord.gg/fU6zfBj">▶ *Click here to join my Discord server</a>
+<a href="https://discord.gg/fU6zfBj">▶ Click here to join my Discord server</a>
 </body>
 </html>
