--- a/community/index.html
+++ b/community/index.html
@@ -15,11 +15,16 @@ title: Zuurix.com - Community
 <p>Working on graphics and animations, alpha demo isn't coming this month.</p>
 
 <comments>
+<a>Discord</a>
+</comments>
+
+<p><a href="https://discord.gg/XkE3yAz">▶ Join my Discord server</a></p>
+
+<comments>
 <a>Links</a>
 </comments>
 
-<p><a href="http://zuurix.com/discord">▶ Join my Discord server</a></p>
-<p><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">▶ Join my Steam group</a></p>
+<p><a href="https://steamcommunity.com/groups/GamesByZuurix" target="_blank">▶ Join my Steam group</a></p>
 <p><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">▶ Follow my Facebook page</a></p>
 <p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">▶ Subscribe to my YouTube channel</a></p>
 <p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ Follow me on Twitter</a></p>
