--- a/community/index.html
+++ b/community/index.html
@@ -15,21 +15,21 @@ title: Zuurix.com - Community
 <p>Working on graphics and animations, alpha demo isn't coming this month.</p>
 
 <comments>
-<a>Discord</a>
+<a>Join my Discord server</a>
 </comments>
 
-<p><a href="https://discord.gg/XkE3yAz">▶ Join my Discord server</a></p>
+<p><a href="https://discord.gg/XkE3yAz">▶ Click here to join my Discord server</a></p>
 
 <comments>
 <a>Links</a>
 </comments>
 
-<p><a href="https://steamcommunity.com/groups/GamesByZuurix" target="_blank">▶ Join my Steam group</a></p>
-<p><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">▶ Follow my Facebook page</a></p>
-<p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">▶ Subscribe to my YouTube channel</a></p>
-<p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ Follow me on Twitter</a></p>
-<p><a href="https://www.twitch.tv/zuurix0" target="_blank">▶ Follow me on Twitch</a></p>
-<p><a href="https://www.reddit.com/r/GamesByZuurix/" target="_blank">▶ Discuss games by Zuurix on Reddit</a></p>
+<p><a href="https://steamcommunity.com/groups/GamesByZuurix" target="_blank">▶ My Steam group</a></p>
+<p><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">▶ My Facebook page</a></p>
+<p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">▶ My YouTube channel</a></p>
+<p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ My Twitter account</a></p>
+<p><a href="https://www.twitch.tv/zuurix0" target="_blank">▶ My Twitch channel</a></p>
+<p><a href="https://www.reddit.com/r/GamesByZuurix/" target="_blank">▶ My subreddit</a></p>
 
 <comments>
 <a>Comments</a>
