--- a/games/index.html
+++ b/games/index.html
@@ -17,7 +17,7 @@ title: Zuurix.com - Games
 	
 	<ul style="margin-bottom: 180px; list-style-type: none;">
 	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">▶ Get from Steam</a></li>
-	<li><a href="http://zuurix.com/sector-six-press-kit/">▶ View press kit</a></li>
+	<li><a href="http://zuurix.com/sector-six/">▶ View press kit</a></li>
 	</ul>
 	
 	<comments>
