--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -12,59 +12,75 @@ title: Zuurix.com - Light of the Locked World press kit
 <a>Full game description</a>
 </comments>
 	
-	<p>Light of the Locked World is a fantasy RPG with co-op and PvP, focused on combat and exploration.</p>
+<p>Welcome to Caios II - the Locked World, a world of demons and exiles, mages and alchemists, amalgam and abysts, worldlocks and talkstones, mining ports and vast ruins. Light of the Locked World is an RPG inspired by oldschool MMORPG - RuneScape. Its MMO aspects are transformed into local co-op and PVP.</p>
 	
-	<p><b>RPG</b></p>
+<p><b>Story of hidden evil</b></p>
 
-	<p>Fight enemies, equip items to customize your character, learn skills and spells, explore world, complete quests, and make decisions. This is RPG.</p>
+<p>Something is wrong. Complete quests to piece together the truth and stand against the evil that has taken over the Locked World.</p>
 
-	<p><b>Co-op</b></p>
+<p><b>Character customization</b></p>
 
-	<p>Split screen and invite a friend to play with you! Share loot, cooperate to defeat dangerous enemy encounters, explore world's deadliest locations - unite and tame the world.</p>
+<p>Customize your appearance and stats by obtaining equipment from combat, exploration, crafting, quests, and trading. Level up roles to unlock new equipment and activities for your character.</p>
 
-	<p><b>PvP</b></p>
+<p><b>Tactical real-time combat</b></p>
 
-	<p>You are not limited to unity! Enable PvP and turn game into an epic competition for limited resources and treasure.</p>
+<p>Your position determines what attacks the character will use - keep moving from position to position to adapt to combat situations. Weapons have different attacks - learn to use them correctly and overcome every encounter.</p>
+
+<p><b>A world to explore</b></p>
+
+<p>Explore the world with over 30 locations to find loot and unique encounters. Venture into the uncivilized lands for greater challenges.</p>
+
+<p><b>Local PVP and co-op</b></p>
+
+<p>Take the game to the next level by inviting another player to join your world. Compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel - have an experience unique to this type of RPG's.</p>
+
+<comments>
+<a>Screenshots</a>
+</comments>
 	
-  <comments>
-	<a>Developer</a>
-	</comments>
+<img src=
+     "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW-images/Combat%202019-04-18.png"
+      alt="Moonrise Desert" class="center"> 
 	
-	<ul style="list-style-type:none">
-	<li>Zuurix</li>
-	<li><b>Website:</b> http://zuurix.com</li>
-	<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix</li>
-	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix</li>
-	</ul>
+<comments>
+<a>Developer</a>
+</comments>
 	
-	<comments>
-	<a>Availability</a>
-	</comments>
+<ul style="list-style-type:none">
+<li>Zuurix</li>
+<li><b>Website:</b> http://zuurix.com</li>
+<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix</li>
+<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix</li>
+</ul>
 	
-	<ul style="list-style-type:none">
+<comments>
+<a>Availability</a>
+</comments>
+	
+<ul style="list-style-type:none">
 
-	<li>Currently unavailable</li>
-	</ul>
+<li>Currently unavailable</li>
+</ul>
 	
-	<comments>
-	<a>Status</a>
-	</comments>
+<comments>
+<a>Status</a>
+</comments>
 	
-	<ul style="list-style-type:none">
+<ul style="list-style-type:none">
 
-	<li>Alpha</li>
+<li>Alpha</li>
 
-	</ul>
+</ul>
 	
-	<comments>
-	<a>Press contact</a>
-	</comments>
+<comments>
+<a>Press contact</a>
+</comments>
 	
-	<ul style="list-style-type:none">
+<ul style="list-style-type:none">
 
-	<li>Aivaras Klimas</li>
-	<li><b>Email:</b> zuurix@protonmail.com</li>
+<li>Aivaras Klimas</li>
+<li><b>Email:</b> zuurix@protonmail.com</li>
 
-	</ul>
+</ul>
 	
 </div><!-- /.blurb -->
