--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -48,9 +48,9 @@ title: Zuurix.com - Light of the Locked World press kit
 	
 <ul style="list-style-type:none">
 <li>Zuurix</li>
-<li><b>Website:</b> https://zuurix.com</li>
-<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix</li>
-<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix</li>
+<li><b>Website:</b> https://zuurix.com/</li>
+<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix/</li>
+<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix/</li>
 </ul>
 	
 <comments>
