--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -153,31 +153,31 @@ title: Zuurix.com - Sector Six press kit
 	<a>Images</a>
 	</comments>
 
-	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" style="height: 270px; width: 400px;"/></a>
+	<a href="https://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" style="height: 270px; width: 400px;"/></a>
 	
-	<a href="http://imgur.com/8AVlbze"><img src="http://i.imgur.com/8AVlbze.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/8AVlbze"><img src="http://i.imgur.com/8AVlbze.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/H7kUcFO"><img src="http://i.imgur.com/H7kUcFO.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/H7kUcFO"><img src="http://i.imgur.com/H7kUcFO.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/x0nxfnx"><img src="http://i.imgur.com/x0nxfnx.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/x0nxfnx"><img src="http://i.imgur.com/x0nxfnx.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/prIisV9"><img src="http://i.imgur.com/prIisV9.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/prIisV9"><img src="http://i.imgur.com/prIisV9.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/I4Fdhww"><img src="http://i.imgur.com/I4Fdhww.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/I4Fdhww"><img src="http://i.imgur.com/I4Fdhww.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/Zu7oafJ"><img src="http://i.imgur.com/Zu7oafJ.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/Zu7oafJ"><img src="http://i.imgur.com/Zu7oafJ.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/kp5dS0l"><img src="http://i.imgur.com/kp5dS0l.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/kp5dS0l"><img src="http://i.imgur.com/kp5dS0l.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/v5g25bh"><img src="http://i.imgur.com/v5g25bh.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/v5g25bh"><img src="http://i.imgur.com/v5g25bh.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/WedyI0i"><img src="http://i.imgur.com/WedyI0i.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/WedyI0i"><img src="http://i.imgur.com/WedyI0i.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/6rQ5MgZ"><img src="http://i.imgur.com/6rQ5MgZ.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/6rQ5MgZ"><img src="http://i.imgur.com/6rQ5MgZ.png" title="source: imgur.com" /></a>
 
-        <a href="http://imgur.com/HE9VSOk"><img src="http://i.imgur.com/HE9VSOk.png" title="source: imgur.com" /></a>
+        <a href="https://imgur.com/HE9VSOk"><img src="http://i.imgur.com/HE9VSOk.png" title="source: imgur.com" /></a>
 	
 	<space>
 	<a> </a>
