--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -63,12 +63,12 @@ title: Zuurix.com - Light of the Locked World press kit
 </ul>
 	
 <comments>
-<a>Status</a>
+<a>Development stage</a>
 </comments>
 	
 <ul style="list-style-type:none">
 
-<li>Alpha</li>
+<li>Pre-Alpha</li>
 
 </ul>
 	
