--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -84,7 +84,7 @@ title: Zuurix.com - Sector Six press kit
 	</ul>
 	
 	<comments>
-	<a>Status</a>
+	<a>Development status</a>
 	</comments>
 	
 	<ul style="list-style-type:none">
