--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -54,9 +54,9 @@ title: Zuurix.com - Sector Six press kit
 	
 	<ul style="list-style-type:none">
 	<li>Zuurix</li>
-	<li><b>Website:</b> http://zuurix.com</li>
-	<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix</li>
-	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix</li>
+	<li><b>Website:</b> https://zuurix.com/</li>
+	<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix/</li>
+	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix/</li>
 	</ul>
 	
 	<comments>
@@ -78,7 +78,7 @@ title: Zuurix.com - Sector Six press kit
 
 	<li><b>Platforms:</b> Windows, Linux</li>
 	<li><b>Stores:</b> Steam</li>
-	<li><b>Steam Store link: </b>http://store.steampowered.com/app/465020</li>
+	<li><b>Steam Store link: </b>http://store.steampowered.com/app/465020/</li>
 	<li><b>Price:</b> $9.99</li>
 
 	</ul>
