--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -12,11 +12,14 @@ title: Zuurix.com - Light of the Locked World press kit
 <a>Full game description</a>
 </comments>
 	
-<p>Welcome to Caios II - the Locked World, a world of demons and exiles, mages and alchemists, amalgam and abysts, worldlocks and talkstones, mining ports and vast ruins. Light of the Locked World is an RPG inspired by oldschool MMORPG - RuneScape. Its MMO aspects are transformed into local co-op and PVP.</p>
-	
+<p>Welcome to Caios II - the Locked World, a world of demons and exiles, mages and alchemists, amalgam and abysts, worldlocks and talkstones, mining ports and vast ruins.</p>
+<p>Light of the Locked World is an RPG inspired by oldschool MMORPG - RuneScape.</p>
+<p>Its MMO aspects are transformed into local co-op and PVP.</p>
+
 <p><b>Story of hidden evil</b></p>
 
-<p>Something is wrong. Complete quests to piece together the truth and stand against the evil that has taken over the Locked World.</p>
+<p>Something is wrong.</p>
+<p>Complete quests to piece together the truth and stand against the evil that has taken over the Locked World.</p>
 
 <p><b>Character customization</b></p>
 
