--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -50,7 +50,7 @@ title: Zuurix.com - Light of the Locked World press kit
 </comments>
 	
 <ul style="list-style-type:none">
-<li>Zuurix</li>
+<li>Aivaras Klimas</li>
 <li><b>Website:</b> https://zuurix.com/</li>
 <li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix/</li>
 <li><b>Twitter:</b> https://twitter.com/DeveloperZuurix/</li>
