--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -53,7 +53,7 @@ title: Zuurix.com - Sector Six press kit
 	</comments>
 	
 	<ul style="list-style-type:none">
-	<li>Zuurix</li>
+	<li>Aivaras Klimas</li>
 	<li><b>Website:</b> https://zuurix.com/</li>
 	<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix/</li>
 	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix/</li>
@@ -65,7 +65,7 @@ title: Zuurix.com - Sector Six press kit
 	
 	<ul style="list-style-type:none">
 
-	<li>The Freekshow</li>
+	<li>Michael Jendryssek</li>
 	<li><b>Website:</b> http://www.freekshow.de/</li>
 
 	</ul>
