--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -18,8 +18,7 @@ title: Zuurix.com - Light of the Locked World press kit
 
 <p><b>Story of hidden evil</b></p>
 
-<p>Something is wrong.</p>
-<p>Complete quests to piece together the truth and stand against the evil that has taken over the Locked World.</p>
+<p>Something is wrong. Complete quests to piece together the truth and stand against the evil that has taken over the Locked World.</p>
 
 <p><b>Character customization</b></p>
 
