--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -12,8 +12,8 @@ title: Zuurix.com - Light of the Locked World press kit
 <a>Full game description</a>
 </comments>
 	
-<p>Welcome to Caios II - the Locked World, a world of demons and exiles, mages and alchemists, amalgam and abysts, worldlocks and talkstones, mining ports and vast ruins.</p>
-<p>Light of the Locked World is an RPG inspired by oldschool MMORPG - RuneScape.</p>
+<p>Welcome to Caios II - the Locked World. A world of demons and exiles, mages and alchemists, amalgam and abysts, worldlocks and talkstones, mining ports and vast ruins.</p>
+<p>Light of the Locked World is an RPG inspired by oldschool MMORPG RuneScape.</p>
 <p>Its MMO aspects are transformed into local co-op and PVP.</p>
 
 <p><b>Story of hidden evil</b></p>
@@ -22,15 +22,15 @@ title: Zuurix.com - Light of the Locked World press kit
 
 <p><b>Character customization</b></p>
 
-<p>Customize your appearance and stats by obtaining equipment from combat, exploration, crafting, quests, and trading. Level up roles to unlock new equipment and activities for your character.</p>
+<p>Customize your appearance and stats by using equipment obtained from combat, exploration, crafting, quests, and trading. Level up roles to unlock new equipment and activities for your character.</p>
 
 <p><b>Tactical real-time combat</b></p>
 
-<p>Your position determines what attacks the character will use - keep moving from position to position to adapt to combat situations. Weapons have different attacks - learn to use them correctly and overcome every encounter.</p>
+<p>Your position determines what attacks the character will use - keep moving from position to position to adapt to combat situations. Weapons have different attacks - learn to use them correctly and overcome every combat encounter.</p>
 
 <p><b>A world to explore</b></p>
 
-<p>Explore the world with over 30 locations to find loot and unique encounters. Venture into the uncivilized lands for greater challenges.</p>
+<p>There is a lot to find in the world's many locations - including treasure chests, magical artifacts, and unique combat encounters. Exploration is not restricted by level requirements and is not interrupted by loading screens.</p>
 
 <p><b>Local PVP and co-op</b></p>
 
