--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -22,7 +22,7 @@ title: Zuurix.com - Light of the Locked World press kit
 
 <p><b>Character customization</b></p>
 
-<p>Customize your appearance and stats by using equipment obtained from combat, exploration, crafting, quests, and trading. Level up roles to unlock new equipment and activities for your character.</p>
+<p>Customize your appearance and stats by using equipment obtained from combat, exploration, crafting, quests, and trading. Level up roles to unlock new equipment and activities.</p>
 
 <p><b>Tactical real-time combat</b></p>
 
