--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -32,7 +32,7 @@ title: Zuurix.com - Light of the Locked World press kit
 
 <p>There is a lot to find in the world's many locations - including treasure chests, magical artifacts, and unique combat encounters. Exploration is not restricted by level requirements and is not interrupted by loading screens.</p>
 
-<p><b>Local PVP and co-op</b></p>
+<p><b>Local co-op and PVP</b></p>
 
 <p>Take the game to the next level by inviting another player to join your world. Compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel - have an experience unique to this type of RPG's.</p>
 
