--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -12,29 +12,26 @@ title: Zuurix.com - Light of the Locked World press kit
 <a>Full game description</a>
 </comments>
 	
-<p>Welcome to Caios II - the Locked World. A world of demons and exiles, mages and alchemists, amalgam and abysts, worldlocks and talkstones, mining ports and vast ruins.</p>
-<p>Light of the Locked World is an RPG inspired by oldschool MMORPG RuneScape.</p>
-<p>Its MMO aspects are transformed into local co-op and PVP.</p>
+<p>The World Gate has malfunctioned and you are taken to the Locked World.
+As you learn to live in a new world, you notice that something sinister is going on.
+You have to find out what's happening before it's too late to save yourself.</p>
 
-<p><b>Story of hidden evil</b></p>
+<p><b>Features:</b></p>
 
-<p>Something is wrong. Complete quests to piece together the truth and stand against the evil that has taken over the Locked World.</p>
+<p>Light of the Locked World has all of the beloved RPG features - quests, exploration, crafting, and deep character customization - executed in new ways.</p>
 
-<p><b>Character customization</b></p>
+<p><b>Combat:</b></p>
 
-<p>Customize your appearance and stats by using equipment obtained from combat, exploration, crafting, quests, and trading. Level up roles to unlock new equipment and activities.</p>
+<p>Real-time, only one button to attack, effectiveness is based on equipment stats and player's positioning skill.</p>
 
 <p><b>Tactical real-time combat</b></p>
 
-<p>Your position determines what attacks the character will use - keep moving from position to position to adapt to combat situations. Weapons have different attacks - learn to use them correctly and overcome every combat encounter.</p>
-
-<p><b>A world to explore</b></p>
-
-<p>There is a lot to find in the world's many locations - including treasure chests, magical artifacts, and unique combat encounters. Exploration is not restricted by level requirements and is not interrupted by loading screens.</p>
+<p>Light of the Locked World is inspired by oldschool MMORPG RuneScape - its MMO aspect is transformed into local co-op and PVP.</p>
 
 <p><b>Local co-op and PVP</b></p>
 
-<p>Take the game to the next level by inviting another player to join your world. Compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel - have an experience unique to this type of RPG's.</p>
+<p>Take the game to the next level by inviting another player to play with or against you.
+You have the freedom to compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel, and more.</p>
 
 <comments>
 <a>Screenshots</a>
