--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -15,6 +15,8 @@ title: Zuurix.com - Light of the Locked World press kit
 <p>The World Gate has malfunctioned and you are taken to the Locked World.
 As you learn to live in a new world, you notice that something sinister is going on.
 You have to find out what's happening before it's too late to save yourself.</p>
+	
+<p>Light of the Locked World is a fantasy RPG inspired by RuneScape.</p>
 
 <p><b>Features:</b></p>
 
@@ -26,7 +28,7 @@ You have to find out what's happening before it's too late to save yourself.</p>
 
 <p><b>Local co-op and PVP</b></p>
 	
-<p>Light of the Locked World is inspired by oldschool MMORPG RuneScape - its MMO aspect is transformed into local co-op and PVP.</p>
+<p>RuneScape's MMO aspect is transformed into local co-op and PVP.</p>
 
 <p>Take the game to the next level by inviting another player to play with or against you.
 You have the freedom to compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel, and more.</p>
