--- a/community/index.html
+++ b/community/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Community
 
 <p>Light of the Locked World status:</p>
 
-<p>Working on combat and many other things, pre-alpha demo might be released this month!</p>
+<p>Pre-alpha demo postponed until next month - have to fix a couple of new issues.</p>
 
 <comments>
 <a>Join my Discord server</a>
