--- a/community/index.html
+++ b/community/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Community
 
 <p>Light of the Locked World status:</p>
 
-<p>Pre-alpha demo might not be released this month: There are new problems I need to fix.</p>
+<p>Currently doing the area loading system rework, pre-alpha demo is postponed to June.</p>
 
 <comments>
 <a>Join my Discord server</a>
