--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -13,14 +13,14 @@ title: Zuurix.com - Light of the Locked World press kit
 </comments>
 	
 <p>The World Gate has malfunctioned and you are taken to the Locked World.
-As you learn to live in a new world, you notice that something sinister is going on.
+As you learn to live in it, you notice that something sinister is going on.
 You have to find out what's happening before it's too late to save yourself.</p>
 	
 <p>Light of the Locked World is a fantasy RPG inspired by RuneScape.</p>
 
 <p><b>Features:</b></p>
 
-<p>Light of the Locked World has all of the beloved RPG features - quests, exploration, crafting, and deep character customization - executed in new ways.</p>
+<p>Light of the Locked World has all of the beloved RPG features - quests, exploration, crafting, and deep character customization - executed in uncommon ways.</p>
 
 <p><b>Combat:</b></p>
 
