--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -11,12 +11,12 @@ title: Zuurix.com - Light of the Locked World press kit
 <comments>
 <a>Full game description</a>
 </comments>
+
+<p>Light of the Locked World is a fantasy RPG inspired by RuneScape.</p>
 	
 <p>The World Gate has malfunctioned and you are taken to the Locked World.
 As you learn to live in it, you notice that something sinister is going on.
-You have to find out what's happening before it's too late to save yourself.</p>
-	
-<p>Light of the Locked World is a fantasy RPG inspired by RuneScape.</p>
+This strange world is in danger - you must find out what's happening before it's too late to save yourself.</p>
 
 <p><b>Features:</b></p>
 
@@ -26,7 +26,7 @@ You have to find out what's happening before it's too late to save yourself.</p>
 
 <p>Real-time, only one button to attack, effectiveness is based on equipment stats and player's positioning skill.</p>
 
-<p><b>Local co-op and PVP</b></p>
+<p><b>Local co-op and PVP:</b></p>
 	
 <p>RuneScape's MMO aspect is transformed into local co-op and PVP.</p>
 
