--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -42,7 +42,7 @@ title: Zuurix.com - Sector Six press kit
 	<a> </a>
 	</space>
 	
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/DRqp3gsbvOw" frameborder="0" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/watch?v=3f1KipPu1fg" frameborder="0" allowfullscreen></iframe>
   
 	<space>
 	<a> </a>
